# ncmdump-rs

./: Cargo.toml  README.md
src/: dump.rs  main.rs
